# spa-ai

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: anti_patterns.md  commitments.md  demo_script.md  launch_plan.md  loom_authoring_guide.md  looms_in_production.md  manifesto.md  mission.md  pain_points.md  principles.md  promises.md  sakichi_100_visions.md
src/spa_ai/: __init__.py  cli.py  config.py  registry.py  scanner.py  telemetry.py  telemetry_aggregate.py
src/spa_ai/looms/: __init__.py  base.py  contributing_md.py  eof_newline.py  literature_drift_detector.py  pre_commit_formatter.py  pre_commit_formatter_rust.py  silent_failure_grepper.py  weaver_classes.py
tests/: conftest.py  test_cli.py  test_contributing_md.py  test_doctor.py  test_driver_profile_field.py  test_eof_newline.py  test_literature_drift_detector.py  test_literature_drift_navigation_safety_core.py  test_loom_dignity_frame.py  test_pre_commit_formatter.py  test_pre_commit_formatter_rust.py  test_registry.py  test_scanner.py  test_silent_failure_grepper.py  test_telemetry.py  test_telemetry_aggregate.py  test_weaver_classes.py
tests/fixtures/: navigation_safety_config_excerpt.dart
